# FilesSize

./: CMakeLists.txt
FilesSize/: CMakeLists.txt  main.cpp
